[gd_scene load_steps=7 format=2]

[ext_resource path="res://Fonts/Roboto-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://healthboss.tres" type="Theme" id=2]
[ext_resource path="res://Loading.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.294118, 0.482353, 0.537255, 1 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[node name="Loading" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.490196 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -172.0
margin_top = -183.0
margin_right = 184.0
margin_bottom = 198.0
custom_styles/panel = SubResource( 1 )

[node name="Loading" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -62.0
margin_top = 49.0
margin_right = 98.0
margin_bottom = 80.0
rect_rotation = 0.37681
custom_fonts/font = SubResource( 2 )
text = "Loading..."

[node name="World1" type="Button" parent="Panel"]
margin_left = 55.0
margin_top = 195.0
margin_right = 105.0
margin_bottom = 221.0
rect_pivot_offset = Vector2( 32, 12 )
custom_fonts/font = SubResource( 3 )
text = "Map1"

[node name="World2" type="Button" parent="Panel"]
margin_left = 149.0
margin_top = 195.0
margin_right = 199.0
margin_bottom = 221.0
rect_pivot_offset = Vector2( 32, 12 )
custom_fonts/font = SubResource( 3 )
text = "Map2"

[node name="World3" type="Button" parent="Panel"]
margin_left = 243.0
margin_top = 195.0
margin_right = 293.0
margin_bottom = 221.0
rect_pivot_offset = Vector2( 32, 12 )
custom_fonts/font = SubResource( 3 )
text = "Map3"

[node name="World4" type="Button" parent="Panel"]
margin_left = 55.0
margin_top = 250.0
margin_right = 105.0
margin_bottom = 276.0
rect_pivot_offset = Vector2( 32, 12 )
custom_fonts/font = SubResource( 3 )
text = "Map4"

[node name="World5" type="Button" parent="Panel"]
margin_left = 149.0
margin_top = 250.0
margin_right = 199.0
margin_bottom = 276.0
rect_pivot_offset = Vector2( 32, 12 )
custom_fonts/font = SubResource( 3 )
text = "Map5"

[node name="World6" type="Button" parent="Panel"]
margin_left = 243.0
margin_top = 250.0
margin_right = 293.0
margin_bottom = 276.0
rect_pivot_offset = Vector2( 32, 12 )
custom_fonts/font = SubResource( 3 )
text = "Map6"

[node name="World7" type="Button" parent="Panel"]
margin_left = 55.0
margin_top = 304.0
margin_right = 105.0
margin_bottom = 330.0
rect_pivot_offset = Vector2( 32, 12 )
custom_fonts/font = SubResource( 3 )
text = "Boss"

[node name="World8" type="Button" parent="Panel"]
margin_left = 149.0
margin_top = 304.0
margin_right = 244.0
margin_bottom = 330.0
rect_pivot_offset = Vector2( 32, 12 )
custom_fonts/font = SubResource( 3 )
text = "TitleScreen"

[node name="Timer" type="Timer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = 378.0
margin_top = 234.0
margin_right = 650.0
margin_bottom = 286.0
theme = ExtResource( 2 )
value = 70.0
